# globus-registered-api

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  justfile  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml
.github/workflows/: lint.yaml  (+1 more)
changelog.d/: 20251117_105026_8730430+m1yag1_sc_45485_add_basic_auth_mechs.rst  20251215_144822_8730430+m1yag1.rst  20260107_122816_derek_add_justfile.rst  20260109_172045_derek_willdelete_print_command.rst  20260112_114042_derek_openapi_schema_enricher_sc_46815.rst  20260121_103506_8730430+m1yag1_add_get_registered_api_command.rst  20260203_163857_8730430+m1yag1_sc_47176_implement_update_cli_command.rst  20260206_120219_8730430+m1yag1.rst  20260210_162832_kurtmckee_standardize_client_id.rst  20260210_171424_8730430+m1yag1_add_globus_profile_support.rst  20260211_154605_kurtmckee_prep_for_public_access.rst  20260212_190533_derek_cli_config_sc_47400.rst  20260213_170242_derek_reorganize_commands_sc_47437.rst  20260216_155707_derek_scriv_changelog_spacing.rst  20260218_134421_derek_update_test_invocation.rst  20260218_170751_8730430+m1yag1_sc_43647_add_delete_command.rst  20260220_092702_derek_smoother_error_messaging.rst  20260224_121813_derek_cli_config_management_sc_48273.rst  20260302_132125_kurtmckee_prevent_prompt_toolkit_crashes_sc_47404.rst  20260302_160718_derek_rearrange_api_create_sc_47178.rst  20260303_093342_kurtmckee_consistent_sorting_sc_47404.rst  20260304_111411_8730430+m1yag1_sc_48271_implement_gra_build.rst  20260304_131418_derek_reduce_scope_count.rst  20260305_152138_8730430+m1yag1_fix_build_destination_urls.rst  20260306_121117_8730430+m1yag1_sc_48270_implement_gra_publish.rst  20260309_112431_kurtmckee_strip_openapi_path_sc_47404.rst  20260309_142427_kurtmckee_docs_sc_47404.rst  20260310_132852_8730430+m1yag1_fix_capture_description_during_manage.rst  20260311_153056_derek_config_document_version.rst  20260317_113729_kurtmckee_newlines.rst  fragment-template.rst.txt
docs/: README.md  changelog.rst  conf.py  index.rst
requirements/: README.rst
tests/: conftest.py  test_bogus.py  test_cli.py  test_config.py  test_create_registered_api.py  test_error_handling.py  test_extended_flows_client.py  test_get_registered_api.py  test_list_registered_apis.py  test_logout.py  test_profile.py  test_target_specifier.py  test_update_registered_api.py  test_whoami.py
(+127 files in other folders)
