[project]
name = "globus-registered-api"
version = "0.1.0"
description = "Manage Registered APIs in the Globus Flows service"
authors = [
    { name = "Kurt McKee", email = "support@globus.org" },
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.10"
keywords = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click >=8,<9",
]

[project.urls]
Source = "https://github.com/globusonline/globus-registered-api"

[project.scripts]
globus-registered-api = "globus_registered_api.cli:group"
gra = "globus_registered_api.cli:group"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# chipshot
# --------

[tool.chipshot]
template = """
This file is a part of globus-registered-api.
https://github.com/globusonline/globus-registered-api
Copyright 2025 Globus <support@globus.org>
SPDX-License-Identifier: MIT
"""
exclusions = [
]


# coverage
# --------

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = [
    "globus_registered_api",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 50


# flake8
# ------

[tool.flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]


# isort
# -----

[tool.isort]
profile = "black"
force_single_line = true


# mypy
# ----

[tool.mypy]
packages = "globus_registered_api"
strict = true
sqlite_cache = true


# pytest
# ------

[tool.pytest]
testpaths = [
    "tests",
]
addopts = [
    "--color=yes",
]
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Documentation",
    "Development",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
new_fragment_template = "file: fragment-template.rst.txt"
